Fix tests and run configurations